--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mernthapayotube",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node server.js",
+    "client":"npm start --prefix client"
   },
   "keywords": [],
   "author": "",
